--- a/android/build.gradle
+++ b/android/build.gradle
@@ -10,7 +10,6 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:8.5.1'
-//        classpath 'com.android.tools.build:gradle:7.2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -27,11 +26,7 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 34
-    // Conditional for compatibility with AGP <4.2.
-    if (project.android.hasProperty("namespace")) {
-        namespace 'com.shivam.otp_pin_field'
-    }
-
+    namespace = "com.shivam.otp_pin_field"
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
